--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -8,7 +8,8 @@
 
 <body>
     {{> header}}
-    <p>Portfolio page here.</p>
+    
+    <p>project page text would go here</p>
 
     {{> footer}}
 </body>
